Added a Favorite Quote section

--- a/index.html
+++ b/index.html
@@ -58,6 +58,15 @@
         </ul>
     </div>
 
+    <!-- QUOTE SECTION -->
+    <div class="section">
+        <h1>Favorite Quote</h1>
+        <div class="quote">
+            <blockquote>Whenever you think or you can't, you're right.</blockquote>
+        </div>
+    </div>
+
+    <!-- FOOTER-->
     <div>
         <footer>
             <p>Made on 2022 by icy.</p>
